# polars-playground

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  cookiecutter-config-file.yml  pyproject.toml
dag/: dag_polars.py  requirements.txt
docker/: README.md
src/polars_playground/: __init__.py  example.py
tests/test_example/: test_hello.py
